# car-solution

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  docker-compose.yml  game.sh  main.data  main.js  main.wasm  style.css
.github/workflows/: ubuntu-desktop.yml  webassembly.yml
docker/nginx/: emcc.conf
lib/macOS/: install.sh
resources/sprites/: .gitignore
resources/stub/: style.css
src/: before_refactoring.cpp  game.hpp  main.cpp  task.hpp
src/Classes/: Collision.h  Creator.h  Game.cpp  Game.h  GameObject.h  LoadManager.cpp  LoadManager.h  Manager.h  MapManager.h  Random.h  Transform.h  sCars.h  sTransform.h
tests/: CMakeLists.txt  TestGameClass.cpp  TestGameObjectClass.cpp  TestManagerClass.cpp  TestRandomClass.cpp  TestStructCar.cpp  TestStructMain.cpp  TestStructTransform.cpp
